--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ license = "MIT"
 license-files = ["LICENSE"]
 authors = [{ name = "Sarvesh Kapre" }]
 dependencies = [
+  "click==8.1.7",
   "platformdirs==4.2.2",
   "rich==13.7.1",
   "typer==0.12.3",
